# dmopex

./: CMakeLists.txt  README.md
include/: dmopex.h  dmopex_config.h  dmopex_config.h.in  dmopex_non_intrusive.h
src/libdmopex/: libdmopex.def  libdmopex_impl.cpp  libdmopex_impl.h
test/dmopexnonintrusivetest/: dmopexnonintrusivetest.cpp
test/dmopextest/: dmopextest.cpp
